# smart-home-server

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  Log.cpp  Log.h  MinimalWindows.h
src/embedded/: CMakeLists.txt  CommandBuilder.cpp  CommandBuilder.h  SerialComm.cpp  SerialComm.h  SerialCommunication.cpp  SerialCommunication.h  SerialTransmitter.cpp  SerialTransmitter.h
src/server/: CMakeLists.txt  Connection.cpp  Connection.h  ErrorCode.h  Listener.cpp  Listener.h  RequestHandler.h  ServerConfiguration.h  Session.cpp  Session.h  ShmServerInclude.h  shm_yaml.h
